Додає попередні стилі для мобільних пристроїв

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/header';
 @import './components/logo';
 @import './components/mailing-form';
+@import './components/mobile-btn';
 @import './components/social';
 @import './components/index/backdrop';
 @import './components/index/benefits';
