--- a/css/main.css
+++ b/css/main.css
@@ -86,12 +86,16 @@ img {
 }
 
 .container {
-  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
   /* outline: 2px solid green; */
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 .visually-hidden {
@@ -167,46 +171,27 @@ img {
 }
 
 .header {
-  border-bottom: 1px solid var(--border-header-color);
-  text-align: center;
-}
-
-.header__container {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  min-height: 60px;
 }
 
 .nav {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
 .nav__list {
-  display: flex;
+  display: none;
 }
 
 .nav__list .link.current {
   color: var(--accent-color);
 }
 
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav__link {
-  display: block;
-  position: relative;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--title-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-}
-
 .contacts {
-  display: flex;
-  margin-left: auto;
+  display: none;
 }
 
 .contacts__item:not(:last-child) {
@@ -307,6 +292,26 @@ img {
 .form-btn__icon {
   margin-left: 10px;
   fill: currentColor;
+}
+
+.mobile-btn {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.mobile-btn .mobile-btn__icon-close {
+  display: none;
+}
+
+.mobile-btn__mobile-btn.is-open .mobile-btn__icon-close {
+  display: block;
+}
+
+.mobile-btn__mobile-btn.is-open .mobile-btn__icon-menu {
+  display: none;
 }
 
 .social__link {
