--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -52,11 +52,13 @@ img {
 	margin-bottom: 50px;
 }
 .container {
-	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 15px;
 	padding-right: 15px;
+	
+	@media screen and (min-width: 480px) {
+	width: 480px;}
 	/* outline: 2px solid green; */
 }
 .visually-hidden {
