--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -1,32 +1,54 @@
 .hero{
-	padding-top: 200px;
-	padding-bottom: 200px;
+
+	padding-top: 118px;
+	padding-bottom: 118px;
 	text-align: center;
 
 	background-color: var(--primary-beckground-color);
 	background-image: linear-gradient(
 		rgba(47, 48, 58, 0.4), 
-		rgba(47, 48, 58, 0.4)), url(../images/hero-bg-Img.jpg);
+		rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-480.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	
+	@media (min-device-pixel-ratio: 2),
+		(min-resolution: 192dpi),
+		(min-resolution: 2dppx) {
+		background-image: linear-gradient(
+			rgba(47, 48, 58, 0.4), 
+			rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-480@x2.jpg);
+	}
+
+/*	padding-top: 200px;
+	padding-bottom: 200px;
+		background-image: linear-gradient(
+		rgba(47, 48, 58, 0.4), 
+		rgba(47, 48, 58, 0.4)), url(../images/hero-bg-Img.jpg);
+*/
 }
 
 .hero__title {
 	margin: auto;
 	margin-bottom: 30px;
-	max-width: 696px;
+	max-width: 360px;
 	
 	color: var(--primary-white-color);
 	font-weight: 900;
+	font-size: 26px;
+	line-height: 1.61;
+	letter-spacing: 0.06em;
+	text-transform: uppercase
+
+	/*
+	max-width: 696px;
 	font-size: 44px;
 	line-height: 1.36;
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
+	*/
 
 }
 .hero__btn {
-	padding: 10px 32px;
+	padding: 10px 24px;
 	color: var(--primary-white-color);
 	background-color: var(--accent-color);
 	font-weight: 700;
@@ -42,5 +64,8 @@
 	&:focus{
 	background-color: var(--active-btn-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+	}
+	/*
+	padding: 10px 32px;
+	*/
 }
