--- a/css/main.css
+++ b/css/main.css
@@ -73,16 +73,16 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .section__title {
   color: var(--title-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .container {
@@ -128,20 +128,28 @@ img {
 }
 
 .footer__container {
+  text-align: center;
+  /*
   display: flex;
   gap: 70px;
+  */
 }
 
 .footer__contacts {
   display: inline-block;
+  align-items: center;
 }
 
 .footer__logo {
+  margin-bottom: 28px;
+  /*
   margin-bottom: 20px;
+  */
 }
 
 .footer__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 12px;
+  /*margin-bottom: 9px;*/
 }
 
 .footer__map {
@@ -152,8 +160,13 @@ img {
   font-style: normal;
 }
 
+.footer__list {
+  margin-bottom: 60px;
+}
+
 .footer__social {
   padding-top: 12px;
+  margin-bottom: 60px;
 }
 
 .footer__text {
@@ -236,13 +249,17 @@ img {
 }
 
 .logo {
-  margin-right: 93px;
+  /*margin-right: 93px;*/
   color: var(--accent-color);
   font-family: "Raleway";
   font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  text-decoration: none;
+  /*
   font-size: 26px;
   line-height: 1.19;
-  text-decoration: none;
+  */
 }
 
 .logo__word {
@@ -269,20 +286,26 @@ img {
 }
 
 .mailing-form__field {
+  /*
   display: flex;
   position: relative;
+  */
 }
 
 .mailing-form__input {
-  width: 358px;
+  width: 450px;
   height: 50px;
-  padding-left: 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   color: var(--primary-white-color);
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   transition: border-color 250ms var(--timing-function);
+  /*
+  width: 358px;
+  padding-left: 16px;
+  margin-right: 12px;
+  */
 }
 .mailing-form__input:focus {
   border-color: var(--primary-white-color);
@@ -294,6 +317,7 @@ img {
   width: 200px;
   height: 50px;
   padding: 10px 28px;
+  margin: auto;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -399,29 +423,44 @@ img {
 
 .benefits {
   padding-bottom: 0;
+  margin-bottom: 60px;
   background-color: var(--primary-white-color);
 }
 
 .benefits__list {
+  /*
   display: flex;
   gap: 30px;
+  */
 }
 
 .benefits__item {
+  min-width: 450px;
+  margin-bottom: 30px;
+  /*
   max-width: 270px;
+  */
 }
 
 .benefits__icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
+  width: 450px;
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--accessary-white-color);
+  /*
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  margin-bottom: 30px;
+  */
 }
 
 .benefits__title {
+  text-align: center;
   margin-bottom: 10px;
   color: var(--title-color);
   font-weight: 700;
@@ -432,12 +471,15 @@ img {
 
 .customers {
   text-align: center;
+  /*
   padding-top: 94px;
   padding-bottom: 94px;
+  */
 }
 
 .customers__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 30px;
 }
@@ -446,11 +488,14 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--elements-grey-color);
   border-radius: 4px;
   transition: border-color 250ms var(--timing-function);
+  /*
+  width: 170px;
+  */
 }
 .customers__link:hover, .customers__link:focus {
   border-color: var(--accent-color);
@@ -654,23 +699,30 @@ img {
 }
 
 .team__list {
+  /*
   display: flex;
   justify-content: space-between;
+  */
 }
 
 .team__item {
+  margin-bottom: 30px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
 .team__img {
-  width: 270px;
+  margin: auto;
+  /*width: 270px;*/
 }
 
 .team__description {
   padding-top: 30px;
+  padding-bottom: 24px;
+  /*
   padding-bottom: 30px;
+  */
 }
 
 .team__title {
@@ -692,6 +744,7 @@ img {
 }
 
 .works {
+  display: none;
   background-color: var(--primary-white-color);
   text-align: center;
   padding-bottom: 94px;
