--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,17 +6,26 @@
 	padding-bottom: 60px;
 }
 .footer__container {
+	text-align: center;
+	/*
 	display: flex;
 	gap: 70px;
+	*/
+	
 }
 .footer__contacts {
 	display: inline-block;
+	align-items: center;
 }
 .footer__logo {
+	margin-bottom: 28px;
+	/*
 	margin-bottom: 20px;
+	*/
 }
 .footer__item:not(:last-child) {
-	margin-bottom: 9px;
+	margin-bottom: 12px;
+	/*margin-bottom: 9px;*/
 }
 .footer__map {
 	color: var(--primary-white-color);
@@ -24,8 +33,12 @@
 .footer .link {
 	font-style: normal;
 }
+.footer__list {
+	margin-bottom: 60px;
+}
 .footer__social {
 	padding-top: 12px;
+	margin-bottom: 60px;
 }
 .footer__text {
 	font-weight: 700;
