--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,11 +1,15 @@
 .logo {
-	margin-right: 93px;
+	/*margin-right: 93px;*/
 	color: var(--accent-color);
 	font-family: 'Raleway';
 	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.16;
+	text-decoration: none;
+	/*
 	font-size: 26px;
 	line-height: 1.19;
-	text-decoration: none;
+	*/
 }
 .logo__word{
 	color: var(--primary-black-color);
