--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -12,14 +12,15 @@
 	color: var(--primary-white-color);
 }
 .mailing-form__field {
+	/*
 	display: flex;
 	position: relative;
+	*/
 }
 .mailing-form__input {
-	width: 358px;
+	width: 450px;
 	height: 50px;
-	padding-left: 16px;
-	margin-right: 12px;
+	margin-bottom: 20px;
 	color: var(--primary-white-color);
 	background: transparent;
 	border: 1px solid rgba(255, 255, 255, 0.3);
@@ -29,6 +30,12 @@
 	&:focus {
 		border-color: var(--primary-white-color);
 	}
+
+	/*
+	width: 358px;
+	padding-left: 16px;
+	margin-right: 12px;
+	*/
 }
 .form-btn {
 	display: flex;
@@ -36,6 +43,7 @@
 	width: 200px;
 	height: 50px;
 	padding: 10px 28px;
+	margin: auto;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
 	font-size: 16px;
