--- a/sass/components/index/_benefits.scss
+++ b/sass/components/index/_benefits.scss
@@ -1,25 +1,41 @@
 .benefits {
 	padding-bottom: 0;
+	margin-bottom: 60px;
 	background-color: var(--primary-white-color);
 }
 .benefits__list {
+	/*
 	display: flex;
 	gap: 30px;
+	*/
 }
 .benefits__item {
+	min-width: 450px;
+	margin-bottom: 30px;
+	/*
 	max-width: 270px;
+	*/
 }
 .benefits__icon {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 270px;
+	width: 450px;
 	height: 120px;
 	margin-bottom: 30px;
 
 	background-color: var(--accessary-white-color);
+	/*
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 270px;
+	margin-bottom: 30px;
+	*/
+
 }
 .benefits__title {
+	text-align: center;
 	margin-bottom: 10px;
 	color: var(--title-color);
 	font-weight: 700;
