--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -3,21 +3,28 @@
 	background-color: var(--accessary-white-color);
 }
 .team__list {
+	/*
 	display: flex;
 	justify-content: space-between;
+	*/
 }
 .team__item {
+	margin-bottom: 30px;
 	background-color: var(--primary-white-color);
 
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
 }
 .team__img {
-	width: 270px;
+	margin: auto;
+	/*width: 270px;*/
 }
 .team__description {
 	padding-top: 30px;
+	padding-bottom: 24px;
+	/*
 	padding-bottom: 30px;
+	*/
 }
 .team__title {
 	margin-bottom: 10px;
