--- a/css/main.css
+++ b/css/main.css
@@ -180,13 +180,18 @@ img {
 }
 
 .header {
+  height: 60px;
   border-bottom: 1px solid var(--border-header-color);
   text-align: center;
 }
 
 .header__container {
+  /*
   display: flex;
+  /*
   justify-content: space-between;
+  align-items: center;
+  */
 }
 
 .nav {
@@ -195,7 +200,8 @@ img {
 }
 
 .nav__list {
-  display: flex;
+  display: none;
+  /*display: flex;*/
 }
 
 .nav__list .link.current {
@@ -218,8 +224,11 @@ img {
 }
 
 .contacts {
+  display: none;
+  /*
   display: flex;
   margin-left: auto;
+  */
 }
 
 .contacts__item:not(:last-child) {
@@ -386,10 +395,13 @@ img {
   left: 50%;
   padding: 40px;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
   background-color: var(--primary-white-color);
   transition: transform 250ms var(--timing-function);
+  /*
+  width: 528px;
+  height: 581px;
+  */
 }
 
 .is-hidden {
@@ -593,6 +605,11 @@ img {
   margin-bottom: 30px;
 }
 
+.policy__text {
+  font-size: 12px;
+  line-height: 1.16;
+}
+
 .policy__input {
   position: absolute;
   -webkit-appearance: none;
@@ -612,6 +629,8 @@ img {
 }
 
 .policy__link {
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--accent-color);
 }
 
