--- a/sass/components/index/_backdrop.scss
+++ b/sass/components/index/_backdrop.scss
@@ -21,10 +21,13 @@
 	left: 50%;
 	padding: 40px;
 	transform: translate(-50%, -50%) scale(1);
-	width: 528px;
-	height: 581px;
+	width: 450px;
 	background-color: var(--primary-white-color);
 	transition: transform 250ms var(--timing-function);
+	/*
+	width: 528px;
+	height: 581px;
+	*/
 }
 .is-hidden {
 	opacity: 0;
