Додає мобільні стилі в хедер+меню

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './components/footer';
 @import './components/header';
 @import './components/logo';
+@import './components/mobile-menu';
 @import './components/mailing-form';
 @import './components/social';
 @import './components/index/backdrop';
