--- a/css/main.css
+++ b/css/main.css
@@ -180,23 +180,23 @@ img {
 }
 
 .header {
-  height: 60px;
   border-bottom: 1px solid var(--border-header-color);
   text-align: center;
 }
 
-.header__container {
-  /*
-  display: flex;
-  /*
-  justify-content: space-between;
-  align-items: center;
-  */
-}
+/*.header__container{
 
+	display: flex;
+
+	justify-content: space-between;
+	align-items: center;
+
+}*/
 .nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  min-height: 60px;
 }
 
 .nav__list {
@@ -221,6 +221,22 @@ img {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+}
+
+.mobile-btn-burger {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .mobile-btn-burger {
+    display: none;
+  }
+}
+.mobile-btn-burger:hover, .mobile-btn-burger:focus {
+  fill: var(--accent-color);
 }
 
 .contacts {
@@ -277,6 +293,84 @@ img {
 
 .logo__word--white-color {
   color: var(--primary-white-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-white-color);
+  padding: 48px 40px;
+  z-index: 1;
+}
+.mobile-menu__btn-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu.is-open {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-menu__link {
+  display: block;
+  color: var(--primary-black-color);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  margin-bottom: 32px;
+}
+
+.mobile-menu__btn-close {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu__btn-close {
+    display: none;
+  }
+}
+.mobile-menu__btn-close:hover, .mobile-menu__btn-close:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-contacts__item {
+  margin-bottom: 34px;
+}
+
+.mobile-contacts__tel {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+}
+
+.mobile-contacts__email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+}
+
+.mobail-menu__social {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 32px;
+}
+
+.mobail-menu__social-link {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
 }
 
 .mailing-form {
