--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,21 +1,22 @@
 
 .header {
-	height: 60px;
 	border-bottom: 1px solid var(--border-header-color);
 	text-align: center;
 }
-.header__container{
-	/*
+/*.header__container{
+	
 	display: flex;
-	/*
+	
 	justify-content: space-between;
 	align-items: center;
-	*/
-}
+	
+}*/
 
 .nav {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	min-height: 60px;
 }
 .nav__list {
 	display: none;
@@ -37,6 +38,22 @@
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
+}
+
+.mobile-btn-burger {
+	display: inline-flex;
+	padding: 0;
+	margin: 0;
+	border: none;
+	background-color: transparent;
+
+	@media screen and (min-width: 768px) {
+		display: none;
+	}
+	
+	&:hover,
+	&:focus {
+	fill: var(--accent-color);}
 }
 
 .contacts {
