--- a/css/main.css
+++ b/css/main.css
@@ -895,8 +895,17 @@ img {
 
 .filter {
   display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 46px;
+  /*
+  display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  */
 }
 
 .filter__item:not(:last-child) {
