--- a/css/main.css
+++ b/css/main.css
@@ -86,12 +86,18 @@ img {
 }
 
 .container {
-  max-width: 1200px;
+  min-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid green; */
+  /*
+  	max-width: 1200px;
+  	margin-left: auto;
+  	margin-right: auto;
+  	padding-left: 15px;
+  	padding-right: 15px;
+  */
 }
 
 .visually-hidden {
@@ -183,25 +189,32 @@ img {
   border-bottom: 1px solid var(--border-header-color);
   text-align: center;
 }
+@media screen and (max-width: 479px) {
+  .header {
+    width: 100%;
+  }
+}
 
-/*.header__container{
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-	display: flex;
-
-	justify-content: space-between;
-	align-items: center;
-
-}*/
 .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-height: 60px;
 }
-
 .nav__list {
   display: none;
-  /*display: flex;*/
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: flex;
+    margin-left: auto;
+  }
 }
 
 .nav__list .link.current {
@@ -241,16 +254,19 @@ img {
 
 .contacts {
   display: none;
-  /*
-  display: flex;
-  margin-left: auto;
-  */
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
+/*
 .contacts__item:not(:last-child) {
-  margin-right: 50px;
+	margin-right: 50px;
 }
-
+*/
 .contacts__link {
   display: flex;
   align-items: center;
@@ -259,6 +275,14 @@ img {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+}
+@media screen and (min-width: 768px) {
+  .contacts__link {
+    font-size: 12px;
+    line-height: 1.16;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 .contacts__img {
@@ -285,6 +309,11 @@ img {
   font-size: 26px;
   line-height: 1.19;
   */
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
 }
 
 .logo__word {
