--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -52,12 +52,20 @@ img {
 	margin-bottom: 30px;
 }
 .container {
-	max-width: 1200px;
+	min-width: 320px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 15px;
 	padding-right: 15px;
-	/* outline: 2px solid green; */
+
+	/*
+		max-width: 1200px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-left: 15px;
+		padding-right: 15px;
+	*/
+
 }
 .visually-hidden {
 	position: absolute;
