--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,6 +10,9 @@
 	font-size: 26px;
 	line-height: 1.19;
 	*/
+	@media screen and (min-width: 768px) {
+		margin-right: 88px;
+	}
 }
 .logo__word{
 	color: var(--primary-black-color);
