--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -12,13 +12,26 @@
 	background-size: cover;
 	background-position: center;
 	
-	@media (min-device-pixel-ratio: 2),
-		(min-resolution: 192dpi),
+	@media screen and (min-device-pixel-ratio: 2), screen and
+		(min-resolution: 192dpi), screen and
 		(min-resolution: 2dppx) {
 		background-image: linear-gradient(
 			rgba(47, 48, 58, 0.4), 
 			rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-480@x2.jpg);
 	}
+
+@media screen and (min-width: 768px) {
+	background-image: linear-gradient(
+		rgba(47, 48, 58, 0.4), 
+		rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-768.jpg);
+	}
+		@media screen and (min-device-pixel-ratio: 2), screen and
+		(min-resolution: 192dpi), screen and
+		(min-resolution: 2dppx) {
+			background-image: linear-gradient(
+			rgba(47, 48, 58, 0.4), 
+			rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-768@x2.jpg);
+}
 
 /*	padding-top: 200px;
 	padding-bottom: 200px;
