--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -7,6 +7,12 @@
 	display: flex;
 	justify-content: space-between;
 	*/
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 30px;
+	}
 }
 .team__item {
 	margin-bottom: 30px;
@@ -14,6 +20,11 @@
 
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
+
+	@media screen and (min-width: 768px) {
+		min-width: 354px;
+		flex-basis: calc((100% - 4 * 15px) / 2);
+	}	
 }
 .team__img {
 	margin: auto;
