--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,17 +11,32 @@
 	display: flex;
 	gap: 70px;
 	*/
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 	
 }
 .footer__contacts {
 	display: inline-block;
 	align-items: center;
+
+	@media screen and (min-width: 768px) {
+		margin-right: 165px;
+	}
 }
 .footer__logo {
 	margin-bottom: 28px;
 	/*
 	margin-bottom: 20px;
 	*/
+	@media screen and (min-width: 768px) {
+		.logo {
+		margin-right: 0;
+		}
+	}	
 }
 .footer__item:not(:last-child) {
 	margin-bottom: 12px;
@@ -39,6 +54,10 @@
 .footer__social {
 	padding-top: 12px;
 	margin-bottom: 60px;
+
+	@media screen and (min-width: 768px) {
+		padding-top: 0;
+	}
 }
 .footer__text {
 	font-weight: 700;
