Додає десктоп стилі

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -58,14 +58,9 @@ img {
 	padding-left: 15px;
 	padding-right: 15px;
 
-	/*
-		max-width: 1200px;
-		margin-left: auto;
-		margin-right: auto;
-		padding-left: 15px;
-		padding-right: 15px;
-	*/
-
+	@media screen and (min-width: 1200px) {
+	max-width: 1200px;	
+	}
 }
 .visually-hidden {
 	position: absolute;
