--- a/css/main.css
+++ b/css/main.css
@@ -91,13 +91,11 @@ img {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  /*
-  	max-width: 1200px;
-  	margin-left: auto;
-  	margin-right: auto;
-  	padding-left: 15px;
-  	padding-right: 15px;
-  */
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .visually-hidden {
@@ -135,16 +133,24 @@ img {
 
 .footer__container {
   text-align: center;
-  /*
-  display: flex;
-  gap: 70px;
-  */
 }
 @media screen and (min-width: 768px) {
   .footer__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    justify-content: space-between;
+    gap: 70px;
+    flex-wrap: nowrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    text-align: start;
   }
 }
 
@@ -155,6 +161,11 @@ img {
 @media screen and (min-width: 768px) {
   .footer__contacts {
     margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__contacts {
+    margin-right: 0;
   }
 }
 
@@ -169,10 +180,20 @@ img {
     margin-right: 0;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    margin-bottom: 20px;
+  }
+}
 
 .footer__item:not(:last-child) {
   margin-bottom: 12px;
   /*margin-bottom: 9px;*/
+}
+@media screen and (min-width: 1200px) {
+  .footer__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .footer__map {
@@ -211,16 +232,13 @@ img {
   border-bottom: 1px solid var(--border-header-color);
   text-align: center;
 }
-@media screen and (max-width: 479px) {
-  .header {
-    width: 100%;
-  }
-}
 
-.header__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .nav {
@@ -283,12 +301,18 @@ img {
     flex-direction: column;
   }
 }
-
-/*
-.contacts__item:not(:last-child) {
-	margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    flex-direction: row;
+  }
 }
-*/
+
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
 .contacts__link {
   display: flex;
   align-items: center;
@@ -335,6 +359,13 @@ img {
 @media screen and (min-width: 768px) {
   .logo {
     margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.19;
   }
 }
 
@@ -445,11 +476,11 @@ img {
   color: var(--primary-white-color);
 }
 
-.mailing-form__field {
-  /*
-  display: flex;
-  position: relative;
-  */
+@media screen and (min-width: 1200px) {
+  .mailing-form__field {
+    display: flex;
+    position: relative;
+  }
 }
 
 .mailing-form__input {
@@ -461,14 +492,16 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   transition: border-color 250ms var(--timing-function);
-  /*
-  width: 358px;
-  padding-left: 16px;
-  margin-right: 12px;
-  */
 }
 .mailing-form__input:focus {
   border-color: var(--primary-white-color);
+}
+@media screen and (min-width: 1200px) {
+  .mailing-form__input {
+    width: 358px;
+    padding-left: 16px;
+    margin-right: 12px;
+  }
 }
 
 .form-btn {
@@ -486,6 +519,11 @@ img {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .form-btn {
+    margin: 0;
+  }
 }
 
 .form-btn__icon {
@@ -590,12 +628,6 @@ img {
   background-color: var(--primary-white-color);
 }
 
-.benefits__list {
-  /*
-  display: flex;
-  gap: 30px;
-  */
-}
 @media screen and (min-width: 768px) {
   .benefits__list {
     display: flex;
@@ -603,18 +635,27 @@ img {
     gap: 30px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    flex-wrap: nowrap;
+  }
+}
 
 .benefits__item {
-  min-width: 450px;
+  max-width: 450px;
   margin-bottom: 30px;
-  /*
-  max-width: 270px;
-  */
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 768px) {
   .benefits__item {
     min-width: 354px;
     flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    min-width: 270px;
   }
 }
 
@@ -626,17 +667,16 @@ img {
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--accessary-white-color);
-  /*
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  margin-bottom: 30px;
-  */
 }
 @media screen and (min-width: 768px) {
   .benefits__icon {
     width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__icon {
+    width: 270px;
+    margin-bottom: 30px;
   }
 }
 
@@ -657,16 +697,18 @@ img {
 
 .customers {
   text-align: center;
-  /*
-  padding-top: 94px;
-  padding-bottom: 94px;
-  */
+}
+@media screen and (min-width: 1200px) {
+  .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .customers__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 30px;
 }
 
@@ -679,9 +721,11 @@ img {
   border: 1px solid var(--elements-grey-color);
   border-radius: 4px;
   transition: border-color 250ms var(--timing-function);
-  /*
-  width: 170px;
-  */
+}
+@media screen and (min-width: 1200px) {
+  .customers__link {
+    width: 170px;
+  }
 }
 .customers__link:hover, .customers__link:focus {
   border-color: var(--accent-color);
@@ -841,12 +885,6 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /*	padding-top: 200px;
-  	padding-bottom: 200px;
-  		background-image: linear-gradient(
-  		rgba(47, 48, 58, 0.4), 
-  		rgba(47, 48, 58, 0.4)), url(../images/hero-bg-Img.jpg);
-  */
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
@@ -861,6 +899,13 @@ img {
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-Img-768@x2.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-Img.jpg);
   }
 }
 
@@ -901,12 +946,6 @@ img {
   background-color: var(--accessary-white-color);
 }
 
-.team__list {
-  /*
-  display: flex;
-  justify-content: space-between;
-  */
-}
 @media screen and (min-width: 768px) {
   .team__list {
     display: flex;
@@ -914,8 +953,16 @@ img {
     gap: 30px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .team__list {
+    justify-content: space-between;
+  }
+}
 
 .team__item {
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -923,22 +970,23 @@ img {
 }
 @media screen and (min-width: 768px) {
   .team__item {
-    min-width: 354px;
+    max-width: 354px;
     flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    max-width: 270px;
   }
 }
 
 .team__img {
   margin: auto;
-  /*width: 270px;*/
 }
 
 .team__description {
   padding-top: 30px;
   padding-bottom: 24px;
-  /*
-  padding-bottom: 30px;
-  */
 }
 
 .team__title {
