--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,26 +2,15 @@
 .header {
 	border-bottom: 1px solid var(--border-header-color);
 	text-align: center;
-	@media screen and (max-width: 479px) {
-		width: 100%;
-		
-	}
 }
 
 .header__container{
 	@media screen and (min-width: 768px) {
-
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
-.header__container{
-	
-	display: flex;
-	
-	justify-content: space-between;
-	align-items: center;
-	
-}
-
 .nav {
 	
 	display: flex;
@@ -84,17 +73,15 @@
 		display: flex;
 		flex-direction: column;
 	}
-}
-.contacts__item {
-	@media screen and (min-width: 768px) {
-		
+	@media screen and (min-width: 1200px) {
+		flex-direction: row;
 	}
 }
-/*
 .contacts__item:not(:last-child) {
+	@media screen and (min-width: 1200px) {
 	margin-right: 50px;
+	}
 }
-*/
 .contacts__link{
 	display: flex;
 	align-items: center;
