--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -17,10 +17,11 @@
 	color: var(--primary-white-color);
 }
 .mailing-form__field {
-	/*
-	display: flex;
-	position: relative;
-	*/
+
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		position: relative;
+	}
 }
 .mailing-form__input {
 	width: 450px;
@@ -36,11 +37,11 @@
 		border-color: var(--primary-white-color);
 	}
 
-	/*
-	width: 358px;
-	padding-left: 16px;
-	margin-right: 12px;
-	*/
+	@media screen and (min-width: 1200px) {
+		width: 358px;
+		padding-left: 16px;
+		margin-right: 12px;
+	}
 }
 .form-btn {
 	display: flex;
@@ -57,6 +58,10 @@
 	color: var(--primary-white-color);
 	background-color: var(--accent-color);
 	border-radius: 4px;
+
+	@media screen and (min-width: 1200px) {
+		margin: 0;
+	}
 }
 .form-btn__icon {
 	margin-left: 10px;
