--- a/sass/components/index/_costomers.scss
+++ b/sass/components/index/_costomers.scss
@@ -1,14 +1,15 @@
 .customers {
 	text-align: center;
-	/*
-	padding-top: 94px;
-	padding-bottom: 94px;
-	*/
+
+	@media screen and (min-width: 1200px) {
+		padding-top: 94px;
+		padding-bottom: 94px;
+	}
 }
 .customers__list {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	gap: 30px;
 }
 
@@ -22,14 +23,14 @@
 	border-radius: 4px;
 	transition: border-color 250ms var(--timing-function);
 
-	/*
-	width: 170px;
-	*/
+	@media screen and (min-width: 1200px) {
+		width: 170px;	
+	}
 	
 	&:hover,
 	&:focus {
 	border-color: var(--accent-color);
-}
+	}
 }
 .customers__icon {
 	fill: var(--elements-grey-color);
