--- a/css/main.css
+++ b/css/main.css
@@ -171,9 +171,6 @@ img {
 
 .footer__logo {
   margin-bottom: 28px;
-  /*
-  margin-bottom: 20px;
-  */
 }
 @media screen and (min-width: 768px) {
   .footer__logo .logo {
@@ -188,7 +185,6 @@ img {
 
 .footer__item:not(:last-child) {
   margin-bottom: 12px;
-  /*margin-bottom: 9px;*/
 }
 @media screen and (min-width: 1200px) {
   .footer__item:not(:last-child) {
@@ -344,17 +340,12 @@ img {
 }
 
 .logo {
-  /*margin-right: 93px;*/
   color: var(--accent-color);
   font-family: "Raleway";
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
   text-decoration: none;
-  /*
-  font-size: 26px;
-  line-height: 1.19;
-  */
 }
 @media screen and (min-width: 768px) {
   .logo {
@@ -587,10 +578,12 @@ img {
   width: 450px;
   background-color: var(--primary-white-color);
   transition: transform 250ms var(--timing-function);
-  /*
-  width: 528px;
-  height: 581px;
-  */
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .is-hidden {
@@ -920,6 +913,13 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 
 .hero__btn {
   padding: 10px 24px;
@@ -932,13 +932,15 @@ img {
   border-color: transparent;
   border-radius: 4px;
   transition: background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
-  /*
-  padding: 10px 32px;
-  */
 }
 .hero__btn:hover, .hero__btn:focus {
   background-color: var(--active-btn-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+@media screen and (min-width: 1200px) {
+  .hero__btn {
+    padding: 10px 32px;
+  }
 }
 
 .team {
