--- a/sass/components/index/_backdrop.scss
+++ b/sass/components/index/_backdrop.scss
@@ -24,10 +24,11 @@
 	width: 450px;
 	background-color: var(--primary-white-color);
 	transition: transform 250ms var(--timing-function);
-	/*
-	width: 528px;
-	height: 581px;
-	*/
+
+	@media screen and (min-width: 1200px) {
+		width: 528px;
+		height: 581px;
+	}
 }
 .is-hidden {
 	opacity: 0;
