--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -53,13 +53,13 @@
 	font-size: 26px;
 	line-height: 1.61;
 	letter-spacing: 0.06em;
-	text-transform: uppercase
+	text-transform: uppercase;
 
-	/*
-	max-width: 696px;
-	font-size: 44px;
-	line-height: 1.36;
-	*/
+	@media screen and (min-width: 1200px) {
+		max-width: 696px;
+		font-size: 44px;
+		line-height: 1.36;	
+	}	
 
 }
 .hero__btn {
@@ -80,7 +80,8 @@
 	background-color: var(--active-btn-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	}
-	/*
-	padding: 10px 32px;
-	*/
+	
+	@media screen and (min-width: 1200px) {
+		padding: 10px 32px;	
+	}
 }
