Додає десктоп стилі на фільтр у портфоліо

--- a/css/main.css
+++ b/css/main.css
@@ -1060,6 +1060,12 @@ img {
   margin-bottom: 50px;
   */
 }
+@media screen and (min-width: 1200px) {
+  .filter {
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+}
 
 .filter__item:not(:last-child) {
   margin-right: 8px;
