--- a/sass/components/portfolio/_filter.scss
+++ b/sass/components/portfolio/_filter.scss
@@ -10,6 +10,11 @@
 	justify-content: center;
 	margin-bottom: 50px;
 	*/
+
+	@media screen and (min-width: 1200px) {
+		justify-content: center;
+		margin-bottom: 50px;
+	}
 }
 .filter__item:not(:last-child) {
 	margin-right: 8px;
