--- a/css/main.css
+++ b/css/main.css
@@ -487,6 +487,11 @@ img {
 .mailing-form__input:focus {
   border-color: var(--primary-white-color);
 }
+@media screen and (max-width: 479px) {
+  .mailing-form__input {
+    width: calc(100% - 30px);
+  }
+}
 @media screen and (min-width: 1200px) {
   .mailing-form__input {
     width: 358px;
@@ -660,6 +665,11 @@ img {
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--accessary-white-color);
+}
+@media screen and (max-width: 479px) {
+  .benefits__icon {
+    width: calc(100% - 30px);
+  }
 }
 @media screen and (min-width: 768px) {
   .benefits__icon {
