--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -37,6 +37,10 @@
 		border-color: var(--primary-white-color);
 	}
 
+	@media screen and (max-width: 479px) {
+		width: calc(100% - 30px);
+	}
+
 	@media screen and (min-width: 1200px) {
 		width: 358px;
 		padding-left: 16px;
