--- a/sass/components/index/_benefits.scss
+++ b/sass/components/index/_benefits.scss
@@ -42,6 +42,10 @@
 
 	background-color: var(--accessary-white-color);
 
+	@media screen and (max-width: 479px) {
+		width: calc(100% - 30px);
+	}
+
 	@media screen and (min-width: 768px) {
 		width: 354px;
 	}
