--- a/sass/components/index/_backdrop.scss
+++ b/sass/components/index/_backdrop.scss
@@ -25,6 +25,10 @@
 	background-color: var(--primary-white-color);
 	transition: transform 250ms var(--timing-function);
 
+	@media screen and (max-width: 479px) {
+		width: calc(100% - 30px);
+	}
+
 	@media screen and (min-width: 1200px) {
 		width: 528px;
 		height: 581px;
