--- a/sass/components/index/_benefits.scss
+++ b/sass/components/index/_benefits.scss
@@ -2,6 +2,10 @@
 	padding-bottom: 0;
 	margin-bottom: 60px;
 	background-color: var(--primary-white-color);
+
+	@media screen and (min-width: 1200px) {
+		margin-bottom: 0;	
+	}
 }
 .benefits__list {
 
