--- a/sass/components/index/_works.scss
+++ b/sass/components/index/_works.scss
@@ -4,6 +4,10 @@
 
 	text-align: center;
 	padding-bottom: 94px;
+
+	@media screen and (min-width: 1200px) {
+		display: block;
+	}
 }
 .works__list {
 	display: flex;
