--- a/sass/components/index/_forms.scss
+++ b/sass/components/index/_forms.scss
@@ -85,6 +85,11 @@
 .policy__text {
 	font-size: 12px;
 	line-height: 1.16;
+
+	@media screen and (min-width: 1200px) {
+		font-size: 14px;
+		line-height: 1.71;
+	}
 }
 .policy__input {
 	position: absolute;
