--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,12 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .section__title {
   color: var(--title-color);
@@ -83,6 +89,12 @@ img {
   font-size: 28px;
   line-height: 1.17;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .container {
@@ -203,6 +215,11 @@ img {
 .footer__list {
   margin-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .footer__list {
+    margin-bottom: 0;
+  }
+}
 
 .footer__social {
   padding-top: 12px;
@@ -211,6 +228,11 @@ img {
 @media screen and (min-width: 768px) {
   .footer__social {
     padding-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__social {
+    margin-bottom: 0;
   }
 }
 
@@ -326,6 +348,12 @@ img {
     padding-bottom: 5px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    font-size: 14px;
+    line-height: 1.17;
+  }
+}
 
 .contacts__img {
   display: flex;
@@ -372,12 +400,16 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   background-color: var(--primary-white-color);
   padding: 48px 40px;
   z-index: 1;
+  transform: translate(100%, -100%) scale(0.5);
+  transition: transform 250ms var(--timing-function), scale 250ms var(--timing-function);
 }
 .mobile-menu__btn-close {
   position: absolute;
@@ -385,9 +417,7 @@ img {
   right: 15px;
 }
 .mobile-menu.is-open {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  transform: translate(0) scale(1);
 }
 
 .mobile-menu__link {
@@ -477,6 +507,7 @@ img {
 .mailing-form__input {
   width: 450px;
   height: 50px;
+  padding-left: 16px;
   margin-bottom: 20px;
   color: var(--primary-white-color);
   background: transparent;
@@ -659,6 +690,7 @@ img {
   .benefits__item {
     min-width: 354px;
     flex-basis: calc((100% - 60px) / 2);
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -840,6 +872,12 @@ img {
   font-size: 12px;
   line-height: 1.16;
 }
+@media screen and (min-width: 1200px) {
+  .policy__text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
 
 .policy__input {
   position: absolute;
@@ -921,6 +959,11 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img.jpg);
   }
 }
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img@2x.jpg);
+  }
+}
 
 .hero__title {
   margin: auto;
@@ -971,6 +1014,7 @@ img {
 @media screen and (min-width: 768px) {
   .team__list {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
   }
@@ -994,6 +1038,7 @@ img {
   .team__item {
     max-width: 354px;
     flex-basis: calc((100% - 60px) / 2);
+    margin: 0;
   }
 }
 @media screen and (min-width: 1200px) {
