--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -43,6 +43,11 @@ img {
 .section{
 	padding-top: 60px;
 	padding-bottom: 60px;
+
+	@media screen and (min-width: 1200px) {
+		padding-top: 94px;
+		padding-bottom: 94px;
+	}
 }
 .section__title {
 	color: var(--title-color);
@@ -50,6 +55,11 @@ img {
 	font-size: 28px;
 	line-height: 1.17;
 	margin-bottom: 30px;
+
+	@media screen and (min-width: 1200px) {
+		font-size: 36px;
+		line-height: 1.16;
+	}
 }
 .container {
 	min-width: 320px;
@@ -59,7 +69,7 @@ img {
 	padding-right: 15px;
 
 	@media screen and (min-width: 1200px) {
-	max-width: 1200px;	
+		max-width: 1200px;	
 	}
 }
 .visually-hidden {
