--- a/sass/components/_mailing-form.scss
+++ b/sass/components/_mailing-form.scss
@@ -26,6 +26,7 @@
 .mailing-form__input {
 	width: 450px;
 	height: 50px;
+	padding-left: 16px;
 	margin-bottom: 20px;
 	color: var(--primary-white-color);
 	background: transparent;
