--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -2,13 +2,19 @@
     position: fixed;
     top: 0;
     left: 0;
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     
     background-color: var(--primary-white-color);
     padding: 48px 40px;
     z-index: 1;
+
+    transform: translate(100%, -100%) scale(0.5);
+    transition: transform 250ms var(--timing-function),
+    scale 250ms var(--timing-function);
 
     &__btn-close {
         position: absolute;
@@ -17,9 +23,7 @@
     }
 
     &.is-open {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        transform: translate(0) scale(1);
     }
 }
 
