--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -40,6 +40,13 @@
 		rgba(47, 48, 58, 0.4), 
 		rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img.jpg);
 	}
+			@media screen and (min-device-pixel-ratio: 2), screen and
+			(min-resolution: 192dpi), screen and
+			(min-resolution: 2dppx) {
+				background-image: linear-gradient(
+				rgba(47, 48, 58, 0.4), 
+				rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img@2x.jpg);
+			}
 
 }
 
