--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -5,6 +5,7 @@
 .team__list {
 	@media screen and (min-width: 768px) {
 		display: flex;
+		justify-content: center; 
 		flex-wrap: wrap;
 		gap: 30px;
 	}
@@ -26,6 +27,7 @@
 	@media screen and (min-width: 768px) {
 		max-width: 354px;
 		flex-basis: calc((100% - 4 * 15px) / 2);
+		margin: 0;
 	}	
 	
 	@media screen and (min-width: 1200px) {
