--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -71,9 +71,16 @@
 .mobail-menu__social {
     display: flex;
 	align-items: center;
-	justify-content: space-between;
     padding-top: 32px;
 }
+.mobail-menu__social-item {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.mobail-menu__social-item:not(:last-child) { 
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
 .mobail-menu__social-link {
     color: var(--accent-color);
     font-weight: 500;
